--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -11,7 +11,6 @@ general {
         interval = 5
 }
 
-order += "ipv6"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "volume master"
@@ -22,38 +21,38 @@ order += "memory"
 order += "tztime local"
 
 wireless _first_ {
-        format_up = "W: (%quality at %essid) %ip"
-        format_down = "W: down"
+        format_up = "WIFI:%quality at %essid:%ip"
+        format_down = "WIFI: down"
 }
 
 ethernet _first_ {
-        format_up = "E: %ip (%speed)"
-        format_down = "E: down"
+        format_up = "ETH: %ip (%speed)"
+        format_down = "ETH: down"
 }
 
 volume master {
 	format = "VOL: %volume"
-	format_muted = "♪: muted (%volume)"
+	format_muted = "VOL: muted (%volume)"
 }
 
 battery all {
-        format = "%status %percentage %remaining"
+        format = "BAT: %percentage %remaining"
 }
 
 disk "/" {
-        format = "%avail"
+        format = "DISK: %avail"
 }
 
 load {
-        format = "%1min"
+        format = "LOAD: %5min"
 }
 
 memory {
-        format = "%used | %available"
+        format = "RAM: %used|AVAIL: %available"
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M"
+        format = "%Y-%m-%d %H:%M|"
 }
