--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -26,7 +26,7 @@ wireless _first_ {
 }
 
 ethernet _first_ {
-        format_up = "ETH: %ip (%speed)"
+        format_up = "ETH: %ip"
         format_down = "ETH: down"
 }
 
