--- a/.config/i3status/config
+++ b/.config/i3status/config
@@ -44,15 +44,15 @@ disk "/" {
 }
 
 load {
-        format = "LOAD: %5min"
+        format = "LOAD: %1min"
 }
 
 memory {
-        format = "RAM: %used|AVAIL: %available"
+        format = "RAM: %used / AVAIL: %available"
         threshold_degraded = "10G"
         format_degraded = "MEMORY < %available"
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M|"
+        format = "%Y-%m-%d %H:%M ||"
 }
