--- a/.config/i3/config
+++ b/.config/i3/config
@@ -198,4 +198,5 @@ bindsym XF86KbdBrightnessUp exec --no-startup-id asusctl -n
 bindsym XF86Launch4 exec --no-startup-id asusctl profile -n
 bindsym XF86MonBrightnessDown exec --no-startup-id light -U 10
 bindsym XF86MonBrightnessUp exec --no-startup-id light -A 10
+bindsym XF86TouchpadToggle exec --no-startup-id sh ~/.toggle-touchpad.sh
 bindsym Print exec --no-startup-id "sleep 0.1 && (cd ~/Pictures/screenshots/ && scrot -s -q 100)"
