--- a/.config/i3/config
+++ b/.config/i3/config
@@ -183,8 +183,11 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command	i3status
-	position 	top
+        status_command  i3status
+        position        top
+        colors {
+                focused_workspace       #674ea7 #674ea7 #ffffff
+        }
 }
 
 # PERSONAL THINGS
@@ -201,3 +204,7 @@ bindsym XF86MonBrightnessDown exec --no-startup-id light -U 10
 bindsym XF86MonBrightnessUp exec --no-startup-id light -A 10
 bindsym XF86TouchpadToggle exec --no-startup-id sh ~/.toggle-touchpad.sh
 bindsym Print exec --no-startup-id "sleep 0.1 && (cd ~/Pictures/screenshots/ && scrot -s -q 100)"
+
+# colors
+# class                 border  backgr. text    indicator child_border
+client.focused          #674ea7 #674ea7 #ffffff #2e9ef4   #674ea7
