--- a/.config/i3/config
+++ b/.config/i3/config
@@ -52,12 +52,12 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+a kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+u exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
-# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
+bindym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
 bindsym $mod+j focus left
@@ -194,8 +194,6 @@ bar {
 for_window [class=".*"] border pixel 2
 gaps inner 10
 smart_gaps on
-exec_always --no-startup-id nitrogen --set-zoom-fill ~/.imgs/jw_nebula.png --head=0
-exec_always --no-startup-id sh ~/.screen.sh
 bindsym XF86Launch1 exec --no-startup-id i3lock
 bindsym XF86KbdBrightnessDown exec --no-startup-id asusctl -p
 bindsym XF86KbdBrightnessUp exec --no-startup-id asusctl -n
@@ -208,3 +206,7 @@ bindsym Print exec --no-startup-id "sleep 0.2 && (cd ~/Pictures/screenshots/ && 
 # colors
 # class                 border  backgr. text    indicator child_border
 client.focused          #674ea7 #674ea7 #ffffff #2e9ef4   #674ea7
+
+# executions
+exec_always --no-startup-id sh ~/.screen.sh
+exec_always --no-startup-id nitrogen --set-zoom-fill ~/.imgs/jw_nebula.png --head=0
